[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/bird1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/bird3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/bird4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Simple_Platformer/8x8/Enemies/bird2.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Southwold/mobs/Bird.gd" type="Script" id=5]
[ext_resource path="res://audio/mobhit.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.98923, 1.97516 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[node name="Bird" type="Area2D" groups=[
"Mob",
]]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Sight" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
[connection signal="body_entered" from="." to="." method="_on_Bird_body_entered"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
